--- a/hardware/platformio.ini
+++ b/hardware/platformio.ini
@@ -1,14 +1,14 @@
-; PlatformIO Project Configuration File
-;
-;   Build options: build flags, source filter
-;   Upload options: custom upload port, speed and extra flags
-;   Library options: dependencies, extra library storages
-;   Advanced options: extra scripting
-;
-; Please visit documentation for the other options and examples
-; https://docs.platformio.org/page/projectconf.html
-
 [env:d1_mini_pro]
 platform = espressif8266
 board = d1_mini_pro
 framework = arduino
+
+build_flags = 
+    -DSSID_NAME=\"\"
+    -DSSID_PASSWORD=\"\"
+    -DAPI_ROOT=\"\"
+    -DPLANT_NAME=\"\"
+
+lib_deps_external =
+    ArduinoJson@6.10.0
+    https://github.com/DaKaZ/esp8266-restclient.git
