--- a/server/package.json
+++ b/server/package.json
@@ -10,6 +10,10 @@
   "license": "Apache-2.0",
   "dependencies": {
     "express": "^4.16.4",
+    "sequelize": "^5.2.11",
     "sqlite3": "^4.0.6"
+  },
+  "devDependencies": {
+    "sequelize-cli": "^5.4.0"
   }
 }
