Use ESP http client. Remove external dependency

--- a/hardware/platformio.ini
+++ b/hardware/platformio.ini
@@ -6,9 +6,8 @@ framework = arduino
 build_flags = 
     -DSSID_NAME=\"\"
     -DSSID_PASSWORD=\"\"
-    -DAPI_ROOT=\"\"
+    -DPATH=\"\"
     -DPLANT_NAME=\"\"
 
 lib_deps_external =
     ArduinoJson@6.10.0
-    https://github.com/DaKaZ/esp8266-restclient.git
