--- a/server/package.json
+++ b/server/package.json
@@ -8,7 +8,8 @@
     "url": "https://github.com/nishtahir/capella/tree/master/server"
   },
   "scripts": {
-    "start": "[[ ! $NODE_ENV ]] && NODE_ENV='production' && export NODE_ENV; node index.js"
+    "start": "[[ ! $NODE_ENV ]] && NODE_ENV='production' && export NODE_ENV; node index.js",
+    "lint": "npx eslint ."
   },
   "author": "",
   "license": "Apache-2.0",
@@ -18,6 +19,10 @@
     "sqlite3": "^4.1.0"
   },
   "devDependencies": {
+    "eslint": "^7.32.0",
+    "eslint-config-airbnb": "^18.2.1",
+    "eslint-config-airbnb-base": "^14.2.1",
+    "eslint-plugin-import": "^2.25.2",
     "sequelize-cli": "^5.5.1"
   }
 }
