--- a/server/package.json
+++ b/server/package.json
@@ -14,16 +14,14 @@
   "author": "",
   "license": "Apache-2.0",
   "dependencies": {
-    "body-parser": "^1.19.0",
+    "dotenv": "^10.0.0",
     "express": "^4.17.1",
-    "sequelize": "^5.21.1",
-    "sqlite3": "^4.1.0"
+    "mongoose": "^6.0.12"
   },
   "devDependencies": {
     "eslint": "^7.32.0",
     "eslint-config-airbnb": "^18.2.1",
     "eslint-config-airbnb-base": "^14.2.1",
-    "eslint-plugin-import": "^2.25.2",
-    "sequelize-cli": "^5.5.1"
+    "eslint-plugin-import": "^2.25.2"
   }
 }
