--- a/server/.eslintrc.json
+++ b/server/.eslintrc.json
@@ -1,6 +1,5 @@
 {
     "env": {
-        "commonjs": true,
         "es2021": true,
         "node": true
     },
@@ -11,5 +10,12 @@
         "ecmaVersion": 12
     },
     "rules": {
+        "import/extensions": [
+            "error",
+            {
+                "js": "always"
+            }
+        ],
+        "import/prefer-default-export": "off"
     }
 }
